// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WithLabel Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithLabel
    direction="vertical"
    ellipsis={false}
    label="Total WSP"
  >
    EUR 
    <span
      style={
        Object {
          "textDecoration": "line-through",
        }
      }
    >
      15,982.09
    </span>
     
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      12,345.67
    </span>
  </WithLabel>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef
          ellipsis={false}
        >
          Total WSP
        </ForwardRef>,
        <ForwardRef
          ellipsis={false}
        >
          EUR 
          <span
            style={
              Object {
                "textDecoration": "line-through",
              }
            }
          >
            15,982.09
          </span>
           
          <span
            style={
              Object {
                "color": "red",
              }
            }
          >
            12,345.67
          </span>
        </ForwardRef>,
      ],
      "direction": "vertical",
      "padding": "0",
      "renderAs": "div",
      "stack": "0",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Total WSP",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "Total WSP",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "WithLabel__Label-sc-1jhnfnh-0",
            "isStatic": false,
            "rules": Array [
              "max-width:100%;",
              [Function],
              ";font-weight:",
              [Function],
              ";color:",
              [Function],
              ";",
            ],
          },
          "displayName": "WithLabel__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "WithLabel__Label-sc-1jhnfnh-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            "EUR ",
            <span
              style={
                Object {
                  "textDecoration": "line-through",
                }
              }
            >
              15,982.09
            </span>,
            " ",
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
              12,345.67
            </span>,
          ],
          "ellipsis": false,
        },
        "ref": null,
        "rendered": Array [
          "EUR ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "15,982.09",
              "style": Object {
                "textDecoration": "line-through",
              },
            },
            "ref": null,
            "rendered": "15,982.09",
            "type": "span",
          },
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "12,345.67",
              "style": Object {
                "color": "red",
              },
            },
            "ref": null,
            "rendered": "12,345.67",
            "type": "span",
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "WithLabel__Content-sc-1jhnfnh-1",
            "isStatic": false,
            "rules": Array [
              [Function],
              ";max-width:100%;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";color:inherit;",
            ],
          },
          "displayName": "WithLabel__Content",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "WithLabel__Content-sc-1jhnfnh-1",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
        "isStatic": false,
        "rules": Array [
          "display:flex;align-items:flex-start;justify-content:flex-start;",
          "flex-flow:",
          [Function],
          ";> * + *{",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";}",
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          ";",
          [Function],
          ";font-family:inherit;font-weight:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";color:",
          [Function],
          ";",
        ],
      },
      "defaultProps": Object {
        "direction": "vertical",
        "padding": "0",
        "renderAs": "div",
        "stack": "0",
      },
      "displayName": "WithLabel__Wrapper",
      "foldedComponentIds": Array [
        "Box-jf8k8y-0",
      ],
      "propTypes": Object {
        "children": [Function],
        "direction": [Function],
        "padding": [Function],
        "paddingDesktop": [Function],
        "paddingMobile": [Function],
        "paddingTablet": [Function],
        "paddingWide": [Function],
        "renderAs": [Function],
        "stack": [Function],
        "stackDesktop": [Function],
        "stackMobile": [Function],
        "stackTablet": [Function],
        "stackWide": [Function],
      },
      "render": [Function],
      "styledComponentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef
            ellipsis={false}
          >
            Total WSP
          </ForwardRef>,
          <ForwardRef
            ellipsis={false}
          >
            EUR 
            <span
              style={
                Object {
                  "textDecoration": "line-through",
                }
              }
            >
              15,982.09
            </span>
             
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
              12,345.67
            </span>
          </ForwardRef>,
        ],
        "direction": "vertical",
        "padding": "0",
        "renderAs": "div",
        "stack": "0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Total WSP",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "Total WSP",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "WithLabel__Label-sc-1jhnfnh-0",
              "isStatic": false,
              "rules": Array [
                "max-width:100%;",
                [Function],
                ";font-weight:",
                [Function],
                ";color:",
                [Function],
                ";",
              ],
            },
            "displayName": "WithLabel__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "WithLabel__Label-sc-1jhnfnh-0",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "EUR ",
              <span
                style={
                  Object {
                    "textDecoration": "line-through",
                  }
                }
              >
                15,982.09
              </span>,
              " ",
              <span
                style={
                  Object {
                    "color": "red",
                  }
                }
              >
                12,345.67
              </span>,
            ],
            "ellipsis": false,
          },
          "ref": null,
          "rendered": Array [
            "EUR ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "15,982.09",
                "style": Object {
                  "textDecoration": "line-through",
                },
              },
              "ref": null,
              "rendered": "15,982.09",
              "type": "span",
            },
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "12,345.67",
                "style": Object {
                  "color": "red",
                },
              },
              "ref": null,
              "rendered": "12,345.67",
              "type": "span",
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "WithLabel__Content-sc-1jhnfnh-1",
              "isStatic": false,
              "rules": Array [
                [Function],
                ";max-width:100%;font-size:",
                [Function],
                ";line-height:",
                [Function],
                ";color:inherit;",
              ],
            },
            "displayName": "WithLabel__Content",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "WithLabel__Content-sc-1jhnfnh-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
          "isStatic": false,
          "rules": Array [
            "display:flex;align-items:flex-start;justify-content:flex-start;",
            "flex-flow:",
            [Function],
            ";> * + *{",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";}",
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            ";",
            [Function],
            ";font-family:inherit;font-weight:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";color:",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "direction": "vertical",
          "padding": "0",
          "renderAs": "div",
          "stack": "0",
        },
        "displayName": "WithLabel__Wrapper",
        "foldedComponentIds": Array [
          "Box-jf8k8y-0",
        ],
        "propTypes": Object {
          "children": [Function],
          "direction": [Function],
          "padding": [Function],
          "paddingDesktop": [Function],
          "paddingMobile": [Function],
          "paddingTablet": [Function],
          "paddingWide": [Function],
          "renderAs": [Function],
          "stack": [Function],
          "stackDesktop": [Function],
          "stackMobile": [Function],
          "stackTablet": [Function],
          "stackWide": [Function],
        },
        "render": [Function],
        "styledComponentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`WithLabel Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithLabel
    direction="vertical"
    ellipsis={false}
    label="Pieces"
  >
    0
  </WithLabel>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef
          ellipsis={false}
        >
          Pieces
        </ForwardRef>,
        <ForwardRef
          ellipsis={false}
        >
          0
        </ForwardRef>,
      ],
      "direction": "vertical",
      "padding": "0",
      "renderAs": "div",
      "stack": "0",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Pieces",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "Pieces",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "WithLabel__Label-sc-1jhnfnh-0",
            "isStatic": false,
            "rules": Array [
              "max-width:100%;",
              [Function],
              ";font-weight:",
              [Function],
              ";color:",
              [Function],
              ";",
            ],
          },
          "displayName": "WithLabel__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "WithLabel__Label-sc-1jhnfnh-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "0",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "0",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "WithLabel__Content-sc-1jhnfnh-1",
            "isStatic": false,
            "rules": Array [
              [Function],
              ";max-width:100%;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";color:inherit;",
            ],
          },
          "displayName": "WithLabel__Content",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "WithLabel__Content-sc-1jhnfnh-1",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
        "isStatic": false,
        "rules": Array [
          "display:flex;align-items:flex-start;justify-content:flex-start;",
          "flex-flow:",
          [Function],
          ";> * + *{",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";}",
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          ";",
          [Function],
          ";font-family:inherit;font-weight:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";color:",
          [Function],
          ";",
        ],
      },
      "defaultProps": Object {
        "direction": "vertical",
        "padding": "0",
        "renderAs": "div",
        "stack": "0",
      },
      "displayName": "WithLabel__Wrapper",
      "foldedComponentIds": Array [
        "Box-jf8k8y-0",
      ],
      "propTypes": Object {
        "children": [Function],
        "direction": [Function],
        "padding": [Function],
        "paddingDesktop": [Function],
        "paddingMobile": [Function],
        "paddingTablet": [Function],
        "paddingWide": [Function],
        "renderAs": [Function],
        "stack": [Function],
        "stackDesktop": [Function],
        "stackMobile": [Function],
        "stackTablet": [Function],
        "stackWide": [Function],
      },
      "render": [Function],
      "styledComponentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef
            ellipsis={false}
          >
            Pieces
          </ForwardRef>,
          <ForwardRef
            ellipsis={false}
          >
            0
          </ForwardRef>,
        ],
        "direction": "vertical",
        "padding": "0",
        "renderAs": "div",
        "stack": "0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Pieces",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "Pieces",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "WithLabel__Label-sc-1jhnfnh-0",
              "isStatic": false,
              "rules": Array [
                "max-width:100%;",
                [Function],
                ";font-weight:",
                [Function],
                ";color:",
                [Function],
                ";",
              ],
            },
            "displayName": "WithLabel__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "WithLabel__Label-sc-1jhnfnh-0",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "0",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "0",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "WithLabel__Content-sc-1jhnfnh-1",
              "isStatic": false,
              "rules": Array [
                [Function],
                ";max-width:100%;font-size:",
                [Function],
                ";line-height:",
                [Function],
                ";color:inherit;",
              ],
            },
            "displayName": "WithLabel__Content",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "WithLabel__Content-sc-1jhnfnh-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
          "isStatic": false,
          "rules": Array [
            "display:flex;align-items:flex-start;justify-content:flex-start;",
            "flex-flow:",
            [Function],
            ";> * + *{",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";}",
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            ";",
            [Function],
            ";font-family:inherit;font-weight:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";color:",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "direction": "vertical",
          "padding": "0",
          "renderAs": "div",
          "stack": "0",
        },
        "displayName": "WithLabel__Wrapper",
        "foldedComponentIds": Array [
          "Box-jf8k8y-0",
        ],
        "propTypes": Object {
          "children": [Function],
          "direction": [Function],
          "padding": [Function],
          "paddingDesktop": [Function],
          "paddingMobile": [Function],
          "paddingTablet": [Function],
          "paddingWide": [Function],
          "renderAs": [Function],
          "stack": [Function],
          "stackDesktop": [Function],
          "stackMobile": [Function],
          "stackTablet": [Function],
          "stackWide": [Function],
        },
        "render": [Function],
        "styledComponentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`WithLabel Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithLabel
    direction="horizontal"
    ellipsis={false}
    label="RRP"
    style={
      Object {
        "width": "300px",
      }
    }
  >
    EUR 69.99
  </WithLabel>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef
          ellipsis={false}
        >
          RRP
        </ForwardRef>,
        <ForwardRef
          ellipsis={false}
        >
          EUR 69.99
        </ForwardRef>,
      ],
      "direction": "horizontal",
      "padding": "0",
      "renderAs": "div",
      "stack": "0",
      "style": Object {
        "width": "300px",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "RRP",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "RRP",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "WithLabel__Label-sc-1jhnfnh-0",
            "isStatic": false,
            "rules": Array [
              "max-width:100%;",
              [Function],
              ";font-weight:",
              [Function],
              ";color:",
              [Function],
              ";",
            ],
          },
          "displayName": "WithLabel__Label",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "WithLabel__Label-sc-1jhnfnh-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "EUR 69.99",
          "ellipsis": false,
        },
        "ref": null,
        "rendered": "EUR 69.99",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "WithLabel__Content-sc-1jhnfnh-1",
            "isStatic": false,
            "rules": Array [
              [Function],
              ";max-width:100%;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";color:inherit;",
            ],
          },
          "displayName": "WithLabel__Content",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "WithLabel__Content-sc-1jhnfnh-1",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
        "isStatic": false,
        "rules": Array [
          "display:flex;align-items:flex-start;justify-content:flex-start;",
          "flex-flow:",
          [Function],
          ";> * + *{",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";}",
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          [Function],
          ";",
          ";",
          [Function],
          ";font-family:inherit;font-weight:",
          [Function],
          ";font-size:",
          [Function],
          ";line-height:",
          [Function],
          ";color:",
          [Function],
          ";",
        ],
      },
      "defaultProps": Object {
        "direction": "vertical",
        "padding": "0",
        "renderAs": "div",
        "stack": "0",
      },
      "displayName": "WithLabel__Wrapper",
      "foldedComponentIds": Array [
        "Box-jf8k8y-0",
      ],
      "propTypes": Object {
        "children": [Function],
        "direction": [Function],
        "padding": [Function],
        "paddingDesktop": [Function],
        "paddingMobile": [Function],
        "paddingTablet": [Function],
        "paddingWide": [Function],
        "renderAs": [Function],
        "stack": [Function],
        "stackDesktop": [Function],
        "stackMobile": [Function],
        "stackTablet": [Function],
        "stackWide": [Function],
      },
      "render": [Function],
      "styledComponentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
      Symbol(Symbol.hasInstance): [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef
            ellipsis={false}
          >
            RRP
          </ForwardRef>,
          <ForwardRef
            ellipsis={false}
          >
            EUR 69.99
          </ForwardRef>,
        ],
        "direction": "horizontal",
        "padding": "0",
        "renderAs": "div",
        "stack": "0",
        "style": Object {
          "width": "300px",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "RRP",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "RRP",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "WithLabel__Label-sc-1jhnfnh-0",
              "isStatic": false,
              "rules": Array [
                "max-width:100%;",
                [Function],
                ";font-weight:",
                [Function],
                ";color:",
                [Function],
                ";",
              ],
            },
            "displayName": "WithLabel__Label",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "WithLabel__Label-sc-1jhnfnh-0",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "EUR 69.99",
            "ellipsis": false,
          },
          "ref": null,
          "rendered": "EUR 69.99",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "WithLabel__Content-sc-1jhnfnh-1",
              "isStatic": false,
              "rules": Array [
                [Function],
                ";max-width:100%;font-size:",
                [Function],
                ";line-height:",
                [Function],
                ";color:inherit;",
              ],
            },
            "displayName": "WithLabel__Content",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "WithLabel__Content-sc-1jhnfnh-1",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
          "isStatic": false,
          "rules": Array [
            "display:flex;align-items:flex-start;justify-content:flex-start;",
            "flex-flow:",
            [Function],
            ";> * + *{",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";}",
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            ";",
            [Function],
            ";font-family:inherit;font-weight:",
            [Function],
            ";font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";color:",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "direction": "vertical",
          "padding": "0",
          "renderAs": "div",
          "stack": "0",
        },
        "displayName": "WithLabel__Wrapper",
        "foldedComponentIds": Array [
          "Box-jf8k8y-0",
        ],
        "propTypes": Object {
          "children": [Function],
          "direction": [Function],
          "padding": [Function],
          "paddingDesktop": [Function],
          "paddingMobile": [Function],
          "paddingTablet": [Function],
          "paddingWide": [Function],
          "renderAs": [Function],
          "stack": [Function],
          "stackDesktop": [Function],
          "stackMobile": [Function],
          "stackTablet": [Function],
          "stackWide": [Function],
        },
        "render": [Function],
        "styledComponentId": "WithLabel__Wrapper-sc-1jhnfnh-2",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
